style: fix unintended whitespace changes

--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -3,7 +3,9 @@
   gap: 0;
   grid-template-columns: max-content minmax(0, 1fr);
   grid-template-rows: max-content minmax(0, 1fr);
-  grid-template-areas: "top top" "left content";
+  grid-template-areas:
+    "top top"
+    "left content";
   width: 100%;
   height: 100%;
 }
@@ -23,7 +25,10 @@
   gap: 0;
   grid-template-columns: minmax(0, 1fr);
   grid-template-rows: max-content minmax(0, 1fr) max-content;
-  grid-template-areas: "top" "content" "bottom";
+  grid-template-areas:
+    "top"
+    "content"
+    "bottom";
   width: 100%;
   height: 100%;
 }
